--- a/css/base.css
+++ b/css/base.css
@@ -196,3 +196,53 @@ h2 {
 	max-width: 100%;
 	overflow: auto;
 }
+/*------------------------------------------------------------*/
+/* 定義リスト */
+/*------------------------------------------------------------*/
+div.two_block {
+	display: inline-block;
+	width: 48%;
+}
+dl {
+	border-bottom: 1px solid #ddd;
+}
+dl dt,
+dl dd {
+	margin: 0;
+	padding: 10px;
+}
+dl dt {
+	display: inline-block;
+	width: 130px;
+	border-right: 1px solid #ddd;
+}
+dl dd {
+	display: inline-block;
+}
+/*------------------------------------------------------------*/
+/* ボタンエリア */
+/*------------------------------------------------------------*/
+.btn_area {
+	margin-top: 10px;
+	text-align: center;
+}
+/*------------------------------------------------------------*/
+/* ボタン */
+/*------------------------------------------------------------*/
+.btn_base {
+	display: inline-block;
+	border-radius: 4px;
+	border-bottom: 4px solid #787878;
+	padding: 10px 25px;
+	background-color: #C1C1C1;
+	color: white;
+	font-size: 16px;
+	font-weight: bold;
+	text-decoration: none;
+}
+.btn_base:hover {
+	background-color: #A8A8A8;
+}
+.btn_base:active {
+	background-color: #787878;
+}
