--- a/css/base.css
+++ b/css/base.css
@@ -2,15 +2,23 @@ body, div, p, span, table, table th, table td, ul, li {
 	margin: 0;
 	border: 0;
 	padding: 0;
+}
+body, div, p, span, table, table th, table td, ul, li, input, option {
 	box-sizing: border-box;
 	font-family: arial, sans-serif;
-	font-size: 12px;
+	font-size: 16px;
 }
-
 html,
 body {
-	width: 100%;
+	width: 350px;
 	height: 100%;
+}
+input[type="text"],
+input[type="number"] {
+	width: 4em;
+	border-radius: 4px;
+	border: 1px solid #ddd;
+	padding: 4px;
 }
 /*------------------------------------------------------------*/
 /* テーブル */
@@ -90,6 +98,15 @@ table td.pips_shisu_bar {
 	padding-left: 0;
 }
 /*------------------------------------------------------------*/
+/* スクロール領域 */
+/*------------------------------------------------------------*/
+.scroll_wrapper {
+	display: block;
+	width: 100%;
+	white-space: nowrap;
+	overflow: auto;
+}
+/*------------------------------------------------------------*/
 /* マイナス表示 */
 /*------------------------------------------------------------*/
 .minus {
@@ -144,15 +161,32 @@ table td.pips_shisu_bar {
 /*------------------------------------------------------------*/
 /* リスト */
 /*------------------------------------------------------------*/
-ul li {
+.header ul {
+	display: block;
+	overflow: auto;
+	white-space: nowrap;
+	font-size: 0;
+}
+.header ul li {
 	display: inline-block;
+	min-width: 5em;
 	list-style: none;
+}
+.header ul li a {
+	display: block;
+	padding: 10px 20px;
+	background-color: #6A6E76;
+	color: white;
+	text-decoration: none;
+}
+.header ul li a:hover {
+	background-color: #333333;
 }
 /*------------------------------------------------------------*/
 /* コンテンツ */
 /*------------------------------------------------------------*/
 .contents {
-	padding: 4px;
+	padding: 0;
 }
 /*------------------------------------------------------------*/
 /* 数値入力欄 */
@@ -204,16 +238,18 @@ div.two_block {
 	width: 48%;
 }
 dl {
+	margin: 0;
 	border-bottom: 1px solid #ddd;
+	padding: 0;
 }
 dl dt,
 dl dd {
 	margin: 0;
-	padding: 10px;
+	padding: 5px 10px;
 }
 dl dt {
 	display: inline-block;
-	width: 130px;
+	min-width: 9em;
 	border-right: 1px solid #ddd;
 }
 dl dd {
