軽微なデザイン修正・データ修正

--- a/css/base.css
+++ b/css/base.css
@@ -13,12 +13,19 @@ body {
 	width: 350px;
 	height: 100%;
 }
+/*------------------------------------------------------------*/
+/* 入力欄 */
+/*------------------------------------------------------------*/
 input[type="text"],
 input[type="number"] {
-	width: 4em;
+	width: 5em;
 	border-radius: 4px;
 	border: 1px solid #ddd;
 	padding: 4px;
+	font-size: 16px;
+}
+input[type="number"] {
+	text-align: right;
 }
 /*------------------------------------------------------------*/
 /* テーブル */
@@ -189,12 +196,6 @@ table td.pips_shisu_bar {
 	padding: 0;
 }
 /*------------------------------------------------------------*/
-/* 数値入力欄 */
-/*------------------------------------------------------------*/
-input[type="number"] {
-	text-align: right;
-}
-/*------------------------------------------------------------*/
 /* 見出し */
 /*------------------------------------------------------------*/
 h2 {
@@ -254,9 +255,11 @@ dl dt {
 	min-width: 7em;
 	width: 7em;
 	border-right: 1px solid #ddd;
+	white-space: nowrap;
 }
 dl dd {
 	display: inline-block;
+	font-size: 14px;
 }
 /*------------------------------------------------------------*/
 /* ボタンエリア */
