--- a/css/base.css
+++ b/css/base.css
@@ -10,7 +10,7 @@ body, div, p, span, table, table th, table td, ul, li, input, option {
 }
 html,
 body {
-	width: 350px;
+	width: 100%;
 	height: 100%;
 }
 /*------------------------------------------------------------*/
@@ -168,6 +168,12 @@ table td.pips_shisu_bar {
 /*------------------------------------------------------------*/
 /* リスト */
 /*------------------------------------------------------------*/
+.header {
+	width: 100%;
+	text-align: center;
+	background-color: #222222;
+	overflow: auto;
+}
 .header ul {
 	display: block;
 	overflow: auto;
@@ -193,7 +199,10 @@ table td.pips_shisu_bar {
 /* コンテンツ */
 /*------------------------------------------------------------*/
 .contents {
+	width: 100%;
 	padding: 0;
+	padding-bottom: 10px;
+	overflow: auto;
 }
 /*------------------------------------------------------------*/
 /* 見出し */
@@ -275,7 +284,7 @@ dl dd {
 	display: inline-block;
 	border-radius: 4px;
 	border-bottom: 4px solid #787878;
-	padding: 10px 25px;
+	padding: 5px 25px;
 	background-color: #C1C1C1;
 	color: white;
 	font-size: 16px;
