--- a/kabu_analysis/css/base.css
+++ b/kabu_analysis/css/base.css
@@ -303,3 +303,9 @@ dl dd {
 .accordion_wrapper {
 	display: none;
 }
+/*------------------------------------------------------------*/
+/* メニュー */
+/*------------------------------------------------------------*/
+.fixed_menu {
+	display: none;
+}
