--- a/kabu_analysis/css/base.css
+++ b/kabu_analysis/css/base.css
@@ -13,6 +13,9 @@ body {
 	width: 100%;
 	height: 100%;
 }
+ul li {
+	list-style: none;
+}
 /*------------------------------------------------------------*/
 /* 入力欄 */
 /*------------------------------------------------------------*/
@@ -57,6 +60,15 @@ table.mini {
 	display: inline-block;
 	width: auto;
 	vertical-align: bottom;
+}
+table tr.buy_row {
+	background-color: #ff7080;
+}
+table tr.sell_row {
+	background-color: #70d1ff;
+}
+table tr.songiri_row {
+	background-color: #8784fb;
 }
 /*------------------------------------------------------------*/
 /* 株価一覧 */
@@ -103,6 +115,16 @@ table td.judge {
 table td.pips {}
 table td.pips_shisu_bar {
 	padding-left: 0;
+}
+/*------------------------------------------------------------*/
+/* テーブル化 */
+/*------------------------------------------------------------*/
+.table {
+	display: table;
+	width: 100%;
+}
+.table .cell {
+	display: table-cell;
 }
 /*------------------------------------------------------------*/
 /* スクロール領域 */
@@ -182,12 +204,16 @@ table td.pips_shisu_bar {
 }
 .header ul li {
 	display: inline-block;
-	min-width: 5em;
+	min-width: 25%;
+	border-left: 1px solid #222;
 	list-style: none;
+}
+.header ul li:first-child {
+	border-left: 0;
 }
 .header ul li a {
 	display: block;
-	padding: 10px 20px;
+	padding: 16px 20px;
 	background-color: #6A6E76;
 	color: white;
 	text-decoration: none;
@@ -201,7 +227,6 @@ table td.pips_shisu_bar {
 .contents {
 	width: 100%;
 	padding: 0;
-	padding-bottom: 10px;
 	overflow: auto;
 }
 /*------------------------------------------------------------*/
@@ -259,15 +284,14 @@ dl dd {
 	display: table-cell;
 	margin: 0;
 	padding: 5px 10px;
+	white-space: nowrap;
 }
 dl dt {
 	min-width: 7em;
-	width: 7em;
+	width: 9em;
 	border-right: 1px solid #ddd;
-	white-space: nowrap;
 }
 dl dd {
-	display: inline-block;
 	font-size: 14px;
 }
 /*------------------------------------------------------------*/
@@ -275,6 +299,7 @@ dl dd {
 /*------------------------------------------------------------*/
 .btn_area {
 	margin-top: 10px;
+	padding-bottom: 10px;
 	text-align: center;
 }
 /*------------------------------------------------------------*/
@@ -297,6 +322,11 @@ dl dd {
 .btn_base:active {
 	background-color: #787878;
 }
+.btn_base.btn_mini {
+	border-bottom: 2px solid #787878;
+	padding: 2px 15px;
+	font-size: 14px;
+}
 /*------------------------------------------------------------*/
 /* アコーディオン */
 /*------------------------------------------------------------*/
@@ -306,6 +336,6 @@ dl dd {
 /*------------------------------------------------------------*/
 /* メニュー */
 /*------------------------------------------------------------*/
-.fixed_menu {
+.header ul.fixed_menu {
 	display: none;
 }
