--- a/kabu_analysis/css/base.css
+++ b/kabu_analysis/css/base.css
@@ -62,13 +62,13 @@ table.mini {
 	vertical-align: bottom;
 }
 table tr.buy_row {
-	background-color: #ff7080;
+	background-color: #fdd;
 }
 table tr.sell_row {
-	background-color: #70d1ff;
+	background-color: #ddf;
 }
 table tr.songiri_row {
-	background-color: #8784fb;
+	background-color: #ccf;
 }
 /*------------------------------------------------------------*/
 /* 株価一覧 */
@@ -308,7 +308,7 @@ dl dd {
 .btn_base {
 	display: inline-block;
 	border-radius: 4px;
-	border-bottom: 4px solid #787878;
+	border-bottom: 2px solid #787878;
 	padding: 5px 25px;
 	background-color: #C1C1C1;
 	color: white;
