--- a/work/azln/WpfApp1/WpfApp1/MainWindow.xaml
+++ b/work/azln/WpfApp1/WpfApp1/MainWindow.xaml
@@ -7,18 +7,18 @@
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
 		Loaded="Page_Loaded"
-        Title="MainWindow" Height="350" Width="750">
+        Title="MainWindow" Height="500" Width="750">
 	<Grid VerticalAlignment="Top">
 		<StackPanel HorizontalAlignment="Left">
-            <Button Click="Kaishi_Click" Width="120" Height="40" Content="開始"/>
-            <Button Click="Teishi_Click" Width="120" Height="40" Content="停止"/>
+            <Button Click="Kaishi_Click" Width="120" Height="80" Content="開始"/>
+            <Button Click="Teishi_Click" Width="120" Height="80" Content="停止"/>
         </StackPanel>
         <StackPanel HorizontalAlignment="Left" Margin="120,0,0,0">
-            <Button Click="GetColor_Click" Width="120" Height="40" Content="色取得"/>
+            <Button Click="GetColor_Click" Width="120" Height="80" Content="色取得"/>
             <Label x:Name="txtBreakFlg"></Label>
         </StackPanel>
         <StackPanel HorizontalAlignment="Left" Margin="240,0,0,0">
-            <Button Click="BossYusenFlg_Click" Width="120" Height="40" Content="ボス優先切替"/>
+            <Button Click="BossYusenFlg_Click" Width="120" Height="80" Content="ボス優先切替"/>
             <Label x:Name="txtBossYusenFlg"></Label>
         </StackPanel>
         <StackPanel HorizontalAlignment="Left" Margin="360,0,0,0">
@@ -30,13 +30,14 @@
             <Label>出撃後マップ位置調整</Label>
             <TextBox x:Name="txtDragAndDropX" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Text="" Width="120" />
             <TextBox x:Name="txtDragAndDropY" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Text="" Width="120" />
-            <Button Click="DragAndDropClear_Click" Width="120" Height="40" Content="Clear"/>
+            <Button Click="DragAndDropClear_Click" Width="120" Height="80" Content="Clear"/>
         </StackPanel>
         <StackPanel HorizontalAlignment="Left" Margin="600,0,0,0">
-            <Button Click="Debug_Click" Width="120" Height="40" Content="Debug"/>
+            <Button Click="Debug_Click" Width="120" Height="80" Content="Debug"/>
+            <Button Click="Macro_Click" Width="120" Height="80" Content="マクロ実行"/>
         </StackPanel>
 
-        <WindowsFormsHost Grid.Column="0" Margin="0,120,0,0" Height="1080" Width="1920">
+        <WindowsFormsHost Grid.Column="0" Margin="0,160,0,0" Height="1080" Width="1920">
 			<wf:PictureBox x:Name="pictureBox1" />
 		</WindowsFormsHost>
 	</Grid>
